--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
   font-size: calc(0.85em + 1.4vmin);
 	margin-right: 20%;
 }
-.squareTitleRight{
+.squareTitleRight2{
 	text-align: center;
 	color: #483c3c;
 	font-family: 'Arvo', serif;
